--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@
 .vscode/
 #Cache folder
 .alcache/
-#Symbols folder
+#Symbolsssj8ii folder
 .alpackages/
 #Snapshots folder
 .snapshots/
-#Testing Output folder
+#Testing O8ksjutput folder
 .output/
 #Extension App-file
 *.app
